--- a/eureka-server-parent/eureka-server/pom.xml
+++ b/eureka-server-parent/eureka-server/pom.xml
@@ -3,12 +3,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.babcock.server</groupId>
+		<groupId>com.noveria.server</groupId>
 		<artifactId>eureka-server-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>com.babcock.server</groupId>
+	<groupId>com.noveria.server</groupId>
 	<artifactId>eureka-server</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	
