--- a/eureka-server-parent/pom.xml
+++ b/eureka-server-parent/pom.xml
@@ -8,7 +8,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.babcock.server</groupId>
+	<groupId>com.noveria.server</groupId>
 	<artifactId>eureka-server-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
