--- a/eureka-server-parent/eureka-server/pom.xml
+++ b/eureka-server-parent/eureka-server/pom.xml
@@ -114,6 +114,7 @@
 									<directory>${basedir}/target/classes</directory>
 									<includes>
 										<include>*.bat</include>
+										<include>Dockerfile</include>
 									</includes>
 								</resource>
 							</resources>
